--- a/Editor/StateInfo.uxml
+++ b/Editor/StateInfo.uxml
@@ -1,5 +1,5 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="True">
-    <ui:VisualElement class="state-info" style="background-color: rgba(121, 121, 121, 0.3); border-top-left-radius: 4px; border-bottom-left-radius: 4px; border-top-right-radius: 4px; border-bottom-right-radius: 4px; padding-left: 5px; padding-right: 5px; padding-top: 5px; padding-bottom: 5px;">
+    <ui:VisualElement class="state-info" style="background-color: rgba(121, 121, 121, 0.3); border-top-left-radius: 4px; border-bottom-left-radius: 4px; border-top-right-radius: 4px; border-bottom-right-radius: 4px; padding-left: 5px; padding-right: 5px; padding-top: 5px; padding-bottom: 5px; flex-shrink: 0; flex-grow: 1;">
         <ui:Label text="CURRENT STATE" display-tooltip-when-elided="true" class="state-info__title" style="font-size: 10px; -unity-font-style: bold; word-spacing: 20px;" />
         <ui:VisualElement style="flex-direction: row; margin-top: 5px; justify-content: space-between; align-items: flex-end;">
             <StateBadge text="Walk" name="State" class="state-info__state" />
